--- a/style.css
+++ b/style.css
@@ -111,11 +111,9 @@ input {
     height: 3rem;
     margin: 0 auto;
     background-color: transparent;
-    border-right-color: transparent;
-    border-left-color: transparent;
-    border-bottom-color: transparent;
+    border-color: transparent;
     border-radius: 5px;
-    box-shadow: inset 0 0 10px 2px rgba(255, 255, 255, 0.8);
+    box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 .warning {
@@ -170,6 +168,11 @@ li span {
 .lateral-format span {
     text-align: right;
 }
+
+#question .lateral-format span.lower-row {
+    border-bottom: 2px solid black;
+}
+
 
 @media (max-width:768px) {
     .container h1 {
