--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     position: absolute;
     z-index: 1;
     left: 0;
+    top: 0;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -61,6 +62,7 @@ body {
     position: absolute;
     z-index: -1;
     left: 0;
+    top: 0;
 }
 
 .container {
