--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap');
 
 body {
-    background-image: url('https://images.pexels.com/photos/1037995/pexels-photo-1037995.jpeg');
+    background-image: url('SchoolBackground.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
