--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap');
 
 body {
-    background-image: url('SchoolBackground.png');
+    background-image: url('imgs/SchoolBackground.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
